# mind-game

./: .env.example  .gitignore  PROCESS_LOG_agent-engine.md  PROCESS_LOG_console-ascii.md  PROCESS_LOG_game-console.md  PROCESS_LOG_game-mechanics.md  PROCESS_LOG_onboarding-questionnaire.md  PROCESS_LOG_prompt-contract.md  README.md  main.py  pyproject.toml  run_openai.sh
docs/todo/: 01-agent-engine.md  02-prompt-contract.md  03-game-mechanics.md  04-game-console.md  05-console-ascii-panel.md  05-onboarding-questionnaire.md
mind_game/: __init__.py  cli.py  console.py  diagnostics.py  engine.py  onboarding.py  prompt.py  scene_renderer.py  shell.py  story_state.py  tui.py
mind_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_console.py  test_engine.py  test_main.py  test_prompt.py  test_scene_renderer.py  test_shell.py  test_story_state.py  test_tui.py
