[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-game"
version = "0.1.0"
description = "A tiny OpenAI-compatible conversation loop for an evolving game prototype."
requires-python = ">=3.11"
dependencies = [
  "textual>=0.86.0",
]

[tool.setuptools]
packages = ["mind_game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
